# DynamicWorkflowAST

./: .env.example  .gitignore  README.md  README_cn.md  pyproject.toml  start.sh
.agent/: progress_report.md  system_agent.md
.codebuddy/agents/: WFAST.md
agentir/: __init__.py
agentir/agents/: __init__.py  registry.py  scanner.py
agentir/compiler/: __init__.py  base.py
agentir/compiler/adk/: __init__.py  compiler.py
agentir/ir/: __init__.py  models.py  nodes.py  schema.py
agentir/llm/: __init__.py  client.py  config.py
agentir/planner/: __init__.py  planner.py
agentir/server/: __init__.py  cli.py  config.py  main.py  models.py  routes.py
agentir/tools/: __init__.py  registry.py  scanner.py
agentir/validator/: __init__.py  rules.py  validator.py
agents/: analyst.py  researcher.py  writer.py
examples/: parallel_translation.json  quality_check_loop.json  research_pipeline.json
tests/: test_compiler.py  test_llm.py  test_models.py  test_nodes.py  test_planner.py  test_schema.py  test_server.py  test_tools.py  test_validator.py
tools/: calculator.py  web_search.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx
ui/src/api/: client.ts
ui/src/components/: GeneratePanel.tsx  RunPanel.tsx  WorkflowGraph.tsx
ui/src/types/: index.ts
ui/src/utils/: ir-to-graph.ts
