[project]
name = "agentir"
version = "0.1.0"
description = "A framework-agnostic Agent Workflow Intermediate Representation (IR) and Compiler System"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.0",
    "ruff>=0.3",
]
llm = [
    "openai>=1.0",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-dotenv>=1.0",
]
all = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-dotenv>=1.0",
]

[project.scripts]
agentir-server = "agentir.server.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
